[gd_scene load_steps=3 format=3 uid="uid://55eh8f2voxws"]

[ext_resource type="Script" uid="uid://bnu1grsufumeq" path="res://scripts/lobby.gd" id="1_o1atq"]
[ext_resource type="PackedScene" uid="uid://cjkth8sugw7dd" path="res://scenes/game.tscn" id="2_5gu6x"]

[node name="lobby" type="Node2D"]
script = ExtResource("1_o1atq")
game_scene = ExtResource("2_5gu6x")

[node name="StatusLabel" type="Label" parent="."]
offset_right = 203.0
offset_bottom = 23.0
text = "Status: Ready"

[node name="ip" type="Label" parent="."]
offset_left = 24.0
offset_top = 48.0
offset_right = 227.0
offset_bottom = 71.0
text = "IP:"

[node name="port" type="Label" parent="."]
offset_left = 332.0
offset_top = 48.0
offset_right = 535.0
offset_bottom = 71.0
text = "PORT:"

[node name="IPInput" type="LineEdit" parent="."]
offset_left = 24.0
offset_top = 81.0
offset_right = 226.0
offset_bottom = 112.0
text = "127.0.0.1"

[node name="PortInput" type="LineEdit" parent="."]
offset_left = 328.0
offset_top = 81.0
offset_right = 530.0
offset_bottom = 112.0
text = "66666"

[node name="Host" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 459.0
offset_top = 189.0
offset_right = 561.0
offset_bottom = 232.0
grow_horizontal = 2
grow_vertical = 2
text = "Host"

[node name="Join" type="Button" parent="."]
offset_left = 589.0
offset_top = 188.0
offset_right = 693.0
offset_bottom = 233.0
text = "Join"

[node name="StartGame" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 519.0
offset_top = 278.0
offset_right = 621.0
offset_bottom = 321.0
grow_horizontal = 2
grow_vertical = 2
text = "Start"

[node name="SteamContainer" type="VBoxContainer" parent="."]
offset_left = 488.0
offset_top = 360.0
offset_right = 655.0
offset_bottom = 428.0

[node name="LobbyInput" type="LineEdit" parent="SteamContainer"]
layout_mode = 2

[node name="InviteButton" type="Button" parent="SteamContainer"]
layout_mode = 2
text = "Invite"

[node name="PlayerList" type="VBoxContainer" parent="."]
offset_top = 456.0
offset_right = 430.0
offset_bottom = 549.0

[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="SteamContainer/InviteButton" to="." method="_on_invite_button_pressed"]
